edited index.html taking script tags out and adding one requirejs tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link rel="stylesheet" href="assets/css/styles.css">
-		<script src="assets/js/responsive-nav.min.js"></script>
+		
 
 	</head>
 
@@ -69,14 +69,13 @@
 
 		</footer> 
 
-		 <script>
-      var nav = responsiveNav(".nav-collapse", { 
-  transition: 284, // Integer: Speed of the transition, in milliseconds
-  insert: "after" // String: Insert the toggle before or after the navigation
-});
-    </script>
+
+
+
+	<script data-main="js/main" src="js/require.js"></script>
 	
 
 	</body>
 
 </html>
+
